--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.database=mysql
 spring.application.name=sakilademo
-spring.datasource.url=jdbc:mysql://${MYSQL_HOSTNAME:sakila-db.cdk4qemgak7g.eu-west-2.rds.amazonaws.com}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:sakila}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOSTNAME:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:sakila}
 spring.datasource.username=${MYSQL_USERNAME:admin}
 spring.datasource.password=${MYSQL_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
