--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,9 +1,22 @@
-name: verify
+name: Maven Verify
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  first-job:
+  build:
     runs-on: windows-latest
+
     steps:
-      - run: mvn --version
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: '21'
+
+      - name: Run mvn verify
+        run: mvn verify
