--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,15 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.11</version>
+				<configuration>
+					<excludes>
+						<exclude>com/example/sakilademo/response/**</exclude>
+						<exclude>com/example/sakilademo/input/**</exclude>
+<!--						<exclude>com.example.sakilademo/**</exclude>-->
+<!--						<exclude>com/example/sakilademo/model/**</exclude>-->
+						<exclude>com/example/sakilademo/SakilademoApplication.class</exclude>
+					</excludes>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
