--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
 
   clean_and_verify:
     runs-on:  ubuntu-latest
-    needs: build_and_analyze
+    needs: Build_and_analyze
     steps:
       - uses: actions/checkout@v3
         with:
