--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
 						<exclude>com/example/sakilademo/response/**</exclude>
 						<exclude>com/example/sakilademo/input/**</exclude>
 						<exclude>com/example/sakilademo/utility/**</exclude>
+<!--						<exclude>com/example/sakilademo/model/**</exclude>-->
 						<exclude>com/example/sakilademo/SakilademoApplication.class</exclude>
 					</excludes>
 				</configuration>
